fixed toggle visibility and border

--- a/src/components/ForgotPasswordComponent/ForgotPassword.module.css
+++ b/src/components/ForgotPasswordComponent/ForgotPassword.module.css
@@ -67,10 +67,10 @@ input {
   width: 30rem;
 }
 input[type='email']:invalid {
-  border-color: red;
+  border-color: black;
 }
 input[type='password']:invalid {
-  border-color: red;
+  border-color: black;
 }
 label {
   color: var(--primary-black);
