--- a/src/components/LoginComponent/Login.module.css
+++ b/src/components/LoginComponent/Login.module.css
@@ -34,6 +34,15 @@
 .details {
   padding: 3rem;
 }
+
+.eyeshowContainer {
+  padding: 0.625rem;
+}
+
+.eyeshowContainer:hover {
+  background-color: #34a85325;
+}
+
 .forgotPasswordLink {
   color: var(--primary-green);
   font-weight: bolder;
@@ -67,12 +76,7 @@ input {
   transition: all 0.3s ease-in-out;
   width: 30rem;
 }
-input[type='email']:invalid {
-  border-color: red;
-}
-input[type='password']:invalid {
-  border-color: red;
-}
+
 label {
   color: var(--primary-black);
   display: block;
@@ -82,6 +86,25 @@ label {
   margin: 4rem 0 6rem 0;
   width: 8rem;
 }
+
+.passwordError {
+  color: indianred;
+  display: none;
+}
+
+.passwordInput {
+  border: none;
+  margin: 0%;
+}
+
+.passwordInputContainer {
+  border: 1px solid;
+  display: flex;
+  align-items: center;
+  margin: 1rem 0;
+  width: 31.5rem;
+}
+
 .paswordRequirements {
   display: none;
 }
